feat: enhance financeiro and servicos pages with commission tracking and improved service deletion

--- a/DESKTOPV2/funcionario/financeiro-funcionario.html
+++ b/DESKTOPV2/funcionario/financeiro-funcionario.html
@@ -17,7 +17,6 @@
       --success: #28a745;
       --warning: #ffc107;
       --danger: #dc3545;
-      --info: #17a2b8;
       --light: #f8f9fa;
       --dark: #333;
       --border: #ddd;
@@ -110,7 +109,7 @@
     /* BALANCE CARDS */
     .balance-hero {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       gap: 16px;
       margin-bottom: 24px;
     }
@@ -148,7 +147,6 @@
 
     .balance-card.green::before { background: var(--green); }
     .balance-card.red::before { background: var(--red); }
-    .balance-card.blue::before { background: var(--blue); }
     .balance-card.orange::before { background: var(--orange); }
 
     .balance-label {
@@ -166,7 +164,6 @@
 
     .balance-card.green .balance-value { color: var(--green); }
     .balance-card.red .balance-value { color: var(--red); }
-    .balance-card.blue .balance-value { color: var(--blue); }
     .balance-card.orange .balance-value { color: var(--orange); }
 
     /* TABS */
@@ -200,7 +197,6 @@
       align-items: center;
       justify-content: center;
       gap: 8px;
-      text-align: center;
     }
 
     .tab-btn:hover {
@@ -242,6 +238,50 @@
       to { opacity: 1; }
     }
 
+    /* ACTION BUTTONS */
+    .action-buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 16px;
+      margin-bottom: 24px;
+    }
+
+    @media (max-width: 768px) {
+      .action-buttons {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    .action-btn {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
+      padding: 20px;
+      border: 2px solid var(--border);
+      border-radius: 8px;
+      background: white;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+
+    .action-btn:hover {
+      border-color: var(--primary);
+      box-shadow: var(--shadow);
+      transform: translateY(-2px);
+      color: var(--primary);
+    }
+
+    .action-btn i {
+      font-size: 24px;
+    }
+
+    .action-btn span {
+      font-weight: 600;
+      font-size: 14px;
+      text-align: center;
+    }
+
     /* FILTERS */
     .filters {
       display: flex;
@@ -257,15 +297,12 @@
       border-radius: 6px;
       font-size: 14px;
       background: white;
-      cursor: pointer;
-      transition: all 0.3s;
     }
 
     .filter-select:focus,
     .filter-input:focus {
       outline: none;
       border-color: var(--primary);
-      box-shadow: 0 0 0 3px rgba(0, 102, 204, 0.1);
     }
 
     .preset-buttons {
@@ -282,8 +319,8 @@
       cursor: pointer;
       font-size: 13px;
       font-weight: 500;
-      transition: all 0.3s;
       color: #666;
+      transition: all 0.3s;
     }
 
     .preset-btn:hover,
@@ -320,7 +357,6 @@
       text-align: left;
       font-weight: 600;
       font-size: 13px;
-      color: var(--dark);
     }
 
     td {
@@ -329,52 +365,8 @@
       font-size: 14px;
     }
 
-    tr:last-child td {
-      border-bottom: none;
-    }
-
     tbody tr:hover {
       background: var(--light);
-    }
-
-    /* ACTION BUTTONS */
-    .action-buttons {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 16px;
-      margin-bottom: 24px;
-    }
-
-    .action-btn {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-      padding: 20px;
-      border: 2px solid var(--border);
-      border-radius: 8px;
-      background: white;
-      cursor: pointer;
-      transition: all 0.3s;
-      text-decoration: none;
-      color: var(--dark);
-    }
-
-    .action-btn:hover {
-      border-color: var(--primary);
-      box-shadow: var(--shadow);
-      transform: translateY(-2px);
-      color: var(--primary);
-    }
-
-    .action-btn i {
-      font-size: 24px;
-    }
-
-    .action-btn span {
-      font-weight: 600;
-      font-size: 14px;
-      text-align: center;
     }
 
     /* EMPTY STATE */
@@ -395,25 +387,6 @@
       font-size: 20px;
       color: var(--dark);
       margin-bottom: 8px;
-    }
-
-    .empty-state p {
-      margin-bottom: 20px;
-    }
-
-    .btn-primary {
-      background: var(--primary);
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: 600;
-      transition: all 0.3s;
-    }
-
-    .btn-primary:hover {
-      background: #0052a3;
     }
 
     /* LOADING */
@@ -536,7 +509,6 @@
     .form-group textarea:focus {
       outline: none;
       border-color: var(--primary);
-      box-shadow: 0 0 0 3px rgba(0, 102, 204, 0.1);
     }
 
     .modal-buttons {
@@ -627,10 +599,6 @@
 
     .menu-dropdown button:last-child {
       color: var(--danger);
-    }
-
-    .menu-dropdown button:last-child:hover {
-      background: rgba(220, 53, 69, 0.1);
     }
 
     /* OVERLAY */
@@ -733,104 +701,11 @@
       color: var(--danger);
     }
 
-    /* CONFIRM DIALOG */
-    .confirm-dialog {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 2000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-    }
-
-    .confirm-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0, 0, 0, 0.5);
-    }
-
-    .confirm-box {
-      position: relative;
-      background: white;
-      border-radius: 12px;
-      padding: 24px;
-      max-width: 400px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-    }
-
-    .confirm-box h2 {
-      font-size: 18px;
-      margin-bottom: 12px;
-    }
-
-    .confirm-box p {
-      color: #666;
-      margin-bottom: 24px;
-    }
-
-    .confirm-buttons {
-      display: flex;
-      gap: 12px;
-      justify-content: flex-end;
-    }
-
-    .btn-cancel,
-    .btn-confirm {
-      padding: 10px 20px;
-      border-radius: 6px;
-      border: none;
-      cursor: pointer;
-      font-weight: 600;
-      transition: all 0.3s;
-    }
-
-    .btn-cancel {
-      background: var(--light);
-      color: var(--dark);
-    }
-
-    .btn-cancel:hover {
-      background: #e0e0e0;
-    }
-
-    .btn-confirm {
-      background: var(--primary);
-      color: white;
-    }
-
-    .btn-confirm:hover {
-      background: #0052a3;
-    }
-
     /* RESPONSIVE */
     @media (max-width: 768px) {
       .main-container {
         padding: 16px;
         padding-bottom: 100px;
-      }
-
-      .balance-hero {
-        grid-template-columns: repeat(2, 1fr);
-      }
-
-      .tab-btn {
-        font-size: 12px;
-        padding: 12px;
-      }
-
-      .tabs-header {
-        overflow-x: auto;
-      }
-
-      .action-buttons {
-        grid-template-columns: repeat(2, 1fr);
       }
 
       th, td {
@@ -845,10 +720,6 @@
       .filter-select,
       .filter-input {
         width: 100%;
-      }
-
-      .preset-buttons {
-        flex-wrap: wrap;
       }
     }
   </style>
@@ -877,6 +748,10 @@
           <i class="fas fa-cash-register"></i>
           <span>Controle de Caixa</span>
         </button>
+        <button class="tab-btn" data-tab="comissoes" onclick="switchTab('comissoes')">
+          <i class="fas fa-coins"></i>
+          <span>Minhas Comissões</span>
+        </button>
         <button class="tab-btn" data-tab="pendencias" onclick="switchTab('pendencias')">
           <i class="fas fa-clock"></i>
           <span>Pendências</span>
@@ -886,6 +761,7 @@
       <div class="tabs-content">
         <div id="tab-movimentacoes" class="tab-pane active"></div>
         <div id="tab-caixa" class="tab-pane"></div>
+        <div id="tab-comissoes" class="tab-pane"></div>
         <div id="tab-pendencias" class="tab-pane"></div>
       </div>
     </section>
@@ -907,8 +783,22 @@
           <input type="text" id="transactionDescription" required placeholder="Ex: Compra de material">
         </div>
         <div class="form-group">
+          <label>Forma de Pagamento</label>
+          <select id="transactionFormaPagamento" required>
+            <option value="">Selecione...</option>
+            <option value="DINHEIRO">Dinheiro</option>
+            <option value="CARTAO">Cartão</option>
+            <option value="PIX">Pix</option>
+            <option value="CHEQUE">Cheque</option>
+          </select>
+        </div>
+        <div class="form-group">
           <label>Valor (R$)</label>
           <input type="number" id="transactionValue" required placeholder="0.00" step="0.01" min="0">
+        </div>
+        <div class="form-group" id="fornecedorGroup" style="display: none;">
+          <label>Fornecedor (Opcional)</label>
+          <input type="text" id="transactionFornecedor" placeholder="Nome do fornecedor">
         </div>
         <input type="hidden" id="transactionType" value="">
         <div class="modal-buttons">
@@ -962,7 +852,6 @@
 
     // SWITCH TAB
     async function switchTab(tab) {
-      // Update UI
       document.querySelectorAll('.tab-btn').forEach(btn => {
         btn.classList.toggle('active', btn.dataset.tab === tab);
       });
@@ -974,13 +863,15 @@
 
       currentTab = tab;
 
-      // Load data
       switch(tab) {
         case 'movimentacoes':
           await loadMovimentacoes();
           break;
         case 'caixa':
           await loadCaixa();
+          break;
+        case 'comissoes':
+          await loadMinhasComissoes();
           break;
         case 'pendencias':
           await loadPendencias();
@@ -996,26 +887,24 @@
         const response = await window.api.getResumoDia();
         const resumo = response || {};
 
-        const saldo = resumo.saldo || 0;
-        const entrada = resumo.entrada || 0;
-        const saida = resumo.saida || 0;
-        const pendentes = resumo.pendentes || 0;
+        const totalRecebido = resumo.faturamentoDia || 0;
+        const totalSaidas = resumo.totalSaidas || 0;
+        const pendentes = resumo.pending || 0;
 
         container.innerHTML = `
           <div class="balance-card green">
-            <div class="balance-label">Saldo Atual</div>
-            <div class="balance-value">${formatCurrency(saldo)}</div>
-          </div>
-          <div class="balance-card blue">
-            <div class="balance-label">Entrada</div>
-            <div class="balance-value">${formatCurrency(entrada)}</div>
-          </div>
-          <div class="balance-card orange">
-            <div class="balance-label">Saída</div>
-            <div class="balance-value">${formatCurrency(saida)}</div>
+            <div class="balance-label">Total Recebido</div>
+            <div class="balance-value">${formatCurrency(totalRecebido)}</div>
+            <div style="font-size: 12px; color: #666; margin-top: 8px;">
+              💰 ${formatCurrency(resumo.totalDinheiro || 0)} | 💳 ${formatCurrency(resumo.totalCartao || 0)} | 📱 ${formatCurrency(resumo.totalPix || 0)}
+            </div>
           </div>
           <div class="balance-card red">
-            <div class="balance-label">Pendentes</div>
+            <div class="balance-label">Total de Saídas</div>
+            <div class="balance-value">${formatCurrency(totalSaidas)}</div>
+          </div>
+          <div class="balance-card orange">
+            <div class="balance-label">Pendências</div>
             <div class="balance-value">${formatCurrency(pendentes)}</div>
           </div>
         `;
@@ -1141,7 +1030,6 @@
           <div id="caixaHistory"></div>
         `;
 
-        // Load recent transactions for cash control
         const response = await window.api.getHistoricoCaixa({
           dataInicio: new Date().toISOString().split('T')[0],
           dataFim: new Date().toISOString().split('T')[0],
@@ -1199,6 +1087,71 @@
           'Houve um erro ao carregar o controle de caixa.',
           'Tentar novamente',
           'loadCaixa()'
+        );
+      }
+    }
+
+    // LOAD MINHAS COMISSÕES
+    async function loadMinhasComissoes() {
+      const container = document.getElementById('tab-comissoes');
+
+      try {
+        container.innerHTML = createLoading();
+
+        const lavador = await getUserLavador();
+        if (!lavador) {
+          container.innerHTML = createEmptyState(
+            'fa-user-slash',
+            'Perfil não encontrado',
+            'Seu perfil de funcionário não foi encontrado no sistema.'
+          );
+          return;
+        }
+
+        const response = await window.api.getOrdens(1, 100, '', 'COMPLETO', lavador.id);
+        const ordens = response.data || response.ordens || [];
+
+        if (ordens.length === 0) {
+          container.innerHTML = createEmptyState(
+            'fa-inbox',
+            'Nenhuma comissão',
+            'Você não tem ordens completas ainda.'
+          );
+          return;
+        }
+
+        let html = '<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 16px;">';
+
+        ordens.forEach(ordem => {
+          const comissao = ((ordem.valorTotal || ordem.valor) * lavador.comissao) / 100;
+          html += `
+            <div style="background: white; border: 1px solid var(--border); border-radius: 8px; padding: 16px;">
+              <div style="display: flex; justify-content: space-between; margin-bottom: 12px;">
+                <div>
+                  <div style="font-weight: 600; font-size: 14px;">Ordem #${ordem.numeroOrdem || ordem.id.substring(0, 8)}</div>
+                  <div style="font-size: 12px; color: #666;">${ordem.cliente?.nome || 'Cliente'}</div>
+                </div>
+              </div>
+              <div style="font-size: 12px; color: #666;">Valor da Ordem</div>
+              <div style="font-size: 20px; font-weight: 700; color: var(--blue); margin-bottom: 8px;">${formatCurrency(ordem.valorTotal || ordem.valor)}</div>
+              <div style="display: flex; justify-content: space-between; font-size: 12px;">
+                <span>Taxa: ${lavador.comissao}%</span>
+                <span style="font-weight: 600; color: var(--green);">Comissão: ${formatCurrency(comissao)}</span>
+              </div>
+            </div>
+          `;
+        });
+
+        html += '</div>';
+        container.innerHTML = html;
+      } catch (error) {
+        console.error('Erro ao carregar comissões:', error);
+        container.innerHTML = createEmptyState(
+          'fa-exclamation-triangle',
+          'Erro ao carregar',
+          'Houve um erro ao carregar suas comissões.',
+          'Tentar novamente',
+          'loadMinhasComissoes()'
         );
       }
     }
@@ -1277,23 +1230,26 @@
       currentTransactionType = type;
       const modal = document.getElementById('transactionModal');
       const title = document.getElementById('modalTitle');
-      const typeInput = document.getElementById('transactionType');
+      const fornecedorGroup = document.getElementById('fornecedorGroup');
 
       let titleText = '';
       switch(type) {
         case 'despesa':
           titleText = 'Lançar Despesa';
+          fornecedorGroup.style.display = 'block';
           break;
         case 'sangria':
           titleText = 'Sangria';
+          fornecedorGroup.style.display = 'none';
           break;
         case 'suprimento':
           titleText = 'Suprimento';
+          fornecedorGroup.style.display = 'none';
           break;
       }
 
       title.textContent = titleText;
-      typeInput.value = type;
+      document.getElementById('transactionType').value = type;
 
       document.getElementById('transactionForm').reset();
       modal.classList.add('active');
@@ -1310,9 +1266,11 @@
       const description = document.getElementById('transactionDescription').value;
       const value = parseFloat(document.getElementById('transactionValue').value);
       const type = document.getElementById('transactionType').value;
+      const formaPagamento = document.getElementById('transactionFormaPagamento').value;
+      const fornecedor = document.getElementById('transactionFornecedor').value;
 
-      if (!description || !value) {
-        showToast('Preencha todos os campos', 'error');
+      if (!description || !value || !formaPagamento) {
+        showToast('Preencha todos os campos obrigatórios', 'error');
         return;
       }
 
@@ -1320,12 +1278,12 @@
         const transactionData = {
           descricao: description,
           valor: value,
-          tipo: type === 'despesa' ? 'saida' : 'entrada',
-          data: new Date().toISOString(),
-          tipo_transacao: type
+          tipo: type,
+          formaPagamento: formaPagamento,
+          fornecedorNome: fornecedor || undefined
         };
 
-        await window.api.createCaixaMovimento(transactionData);
+        await window.api.createSaida(transactionData);
 
         showToast('Transação lançada com sucesso!', 'success');
         closeTransactionModal();
@@ -1343,7 +1301,8 @@
         'Tem certeza que deseja fechar o caixa? Esta ação não pode ser desfeita.',
         async () => {
           try {
-            await window.api.closeCaixa();
+            const resumo = await window.api.getResumoDia();
+            await window.api.createFechamento(resumo);
             showToast('Caixa fechado com sucesso!', 'success');
             await loadBalanceCards();
             await loadCaixa();
@@ -1379,7 +1338,6 @@
       if (dataInicioInput) dataInicioInput.value = dates.dataInicio;
       if (dataFimInput) dataFimInput.value = dates.dataFim;
 
-      // Update preset button states
       document.querySelectorAll('.preset-btn').forEach(btn => {
         btn.classList.toggle('active', btn.innerText.toLowerCase().includes(preset));
       });
